Projet GL/test/src/test/deca/context/valid/increment2/float-comp-int.deca
// Test bool := float R int

// Historique : cree le 11/01/2023

{
    boolean a = 3.1 > 3;
    boolean b = 3.23 >= 3;
    boolean c = 3.1 < 4;
    boolean d = 2.0 <= 1;
    boolean e = 3.2 == 4;
    boolean f = 9.1 != 3;
}